- changed String.format with String concatenation + some optimizations